--- a/Website Files/CSS/websiteStyle.css
+++ b/Website Files/CSS/websiteStyle.css
@@ -15,6 +15,8 @@ body {
    float: left;
    overflow: hidden;
    padding: 5px;
+   margin-top:10px;
+   
 }
 
 
@@ -30,7 +32,7 @@ nav ul{
 
 nav li{
     display: inline-block;
-    padding-top: 23px;
+    padding-top: 44px;
     padding-right: 50px;
     position: relative;
 }
