--- a/Website Files/CSS/websiteStyle.css
+++ b/Website Files/CSS/websiteStyle.css
@@ -1,142 +1,129 @@
-@import url('https://fonts.googleapis.com/css?family=Open+Sans&display=swap');
+@import url("https://fonts.googleapis.com/css?family=Open+Sans&display=swap");
 
 body {
-    margin: 0;
-    padding: 0;
+  margin: 0;
+  padding: 0;
 }
 
 #container {
-    margin: 0 auto;
-    width: 100%;
+  margin: 0 auto;
+  width: 100%;
 }
 
 #logo {
-
-
-    background-image: url('Images\ShopLogo.png');
-    float: left;
-    overflow: hidden;
-    padding: 5px;
-
-
+  background-image: url("Images\ShopLogo.png");
+  float: left;
+  overflow: hidden;
+  padding: 5px;
 }
 
-
-nav {
-    float: right;
+div.nav {
+  float: right;
+  min-width: 600px;
 }
 
-nav ul {
-    margin: 0;
-    padding-right: 490px;
-    list-style: none;
+div.nav ul {
+  margin: 0;
+  padding-right: 490px;
+  list-style: none;
 }
 
-nav li {
-    display: inline-block;
-    padding-top: 44px;
-    padding-right: 50px;
-    position: relative;
+div.nav li {
+  display: inline-block;
+  padding-top: 44px;
+  padding-right: 50px;
+  position: relative;
 }
 
-nav a {
-    color: white;
-    text-decoration: none;
-    text-transform: uppercase;
-
+div.nav a {
+  color: white;
+  text-decoration: none;
+  text-transform: uppercase;
 }
 
-nav a:hover {
-    color: #000;
-
+div.nav a:hover {
+  color: #000;
 }
 
-nav a:before {
-    content: '';
-    display: block;
-    height: 5px;
-    width: 0%;
-    background-color: #444;
-    top: 0;
-    transition: all ease-in-out 250ms;
+div.nav a:before {
+  content: "";
+  display: block;
+  height: 5px;
+  width: 0%;
+  background-color: #444;
+  top: 0;
+  transition: all ease-in-out 250ms;
 }
 
-nav a:hover::before {
-    width: 100%;
+div.nav a:hover::before {
+  width: 100%;
 }
 
-nav .current {
-    color: black;
+div.nav .current {
+  color: black;
 }
 
 #container #header {
-    background-color: #55d6aa;
-    text-align: center;
-    font: 24px Verdana, Arial, Helvetica, sans-serif;
+  background-color: #55d6aa;
+  min-width: 500px;
+  text-align: center;
+  font: 24px Verdana, Arial, Helvetica, sans-serif;
 }
 
 #container #header::after {
-    content: '';
-    display: table;
-    clear: both;
+  content: "";
+  display: table;
+  clear: both;
 }
 
 #container #content {
-    font: 12px Verdana, Arial, Helvetica, sans-serif;
-    text-align: center;
+  font: 12px Verdana, Arial, Helvetica, sans-serif;
+  text-align: center;
 }
 
 #content .col1 {
-    float: left;
-    width: 10%;
-    height: 550px;
-    background-color: white;
-}
-
-#content .col2 {
-    width: 90%;
-    height: 550px;
-
+  float: left;
+  width: 10%;
+  height: 550px;
+  background-color: white;
 }
 
 
 #content .col2 {
-    width: 90%;
-    height: 550px;
-    color: black;
-    align-items: center;
-    font-family:'Playfair Display';
-    font-size: 22px;
-    align-items: center;
-    flex-direction: column;
+  width: 90%;
+  min-width: 500px;
+  height: 550px;
+  color: black;
+  align-items: center;
+  font-family: "Playfair Display";
+  font-size: 22px;
+  align-items: center;
+  flex-direction: column;
 }
 
-
-#locationLink:visited{
-    color:blue;
+#locationLink:visited {
+  color: blue;
 }
-#locationLink:hover{
-    color:red;
-}
-
-#factoryPic{
-    float: left;
+#locationLink:hover {
+  color: red;
 }
 
-
+#factoryPic {
+  float: left;
+}
 
 #content .col3 {
-    float: right;
-    width: 10%;
-    height: 550px;
+  float: right;
+  width: 10%;
+  height: 550px;
 }
 
 #container #footer {
-    clear: both;
-    padding: 5px;
-    color: white;
-    background-color: gray;
-    font: 12px Arial, Helvetica, sans-serif;
-    text-align: center;
-    height: 65px;
+  clear: both;
+  padding: 5px;
+  color: white;
+  background-color: gray;
+  font: 12px Arial, Helvetica, sans-serif;
+  text-align: center;
+  height: 65px;
 }
