added the required tags in  all the fields and changed the submit bottom color to white and when hover it goes to black

--- a/Website Files/CSS/websiteStyle.css
+++ b/Website Files/CSS/websiteStyle.css
@@ -188,6 +188,7 @@ form label{
 
 #submit{
   align-items: center;
+  color:white;
   margin:auto;
   margin-top: 10px;
   margin-bottom: 10px;
@@ -202,7 +203,7 @@ form label{
 }
 
 #submit:hover{
-  color:white;
+  color:black;
 }
 
 input.wide{
