--- a/Website Files/CSS/styles.css
+++ b/Website Files/CSS/styles.css
@@ -1,5 +1,3 @@
-
-
 body {
   margin: 0;
   padding: 0;
@@ -94,7 +92,7 @@ div.nav .current {
 #content .col2 {
   width: 90%;
   min-width: 900px;
-  height: 1700px;
+  height: 1800px;
   color: black;
   align-items: center;
   font-family: "Playfair Display";
@@ -139,7 +137,9 @@ div.nav .current {
   font-size: 18px;
   text-align: center;
   margin-top: 40px;
+  padding-bottom:50px ;
 }
+
 
 .pictures img {
   border: solid 2px gray;
@@ -261,19 +261,46 @@ a {
 
 }
 
-#contactInfo{
+
+
+
+
+.ContactPicture {
+  width: 90%;
+
+  clear: both;
+  font-size: 18px;
+  border-radius: 5px;
+  height: 320px;
+  margin: auto;
+  padding: 5px;
+  background: white;
+}
+
+.ContactPicture img {
+
+  border: solid 2px gray;
+  border-radius: 10px;
+  margin: 5px;
+  float: left;
+
+}
+
+.ContactPicture ul {
+  list-style: none;
+  font-weight: bold;
+  font-size: 22px;
+}
+
+.ContactPicture ul li {
+  padding:30px;
   text-align: left;
-  color:white;
-
-}
-#contactInfo h2{
-  color:black;
-  text-align: center;
- 
 }
 
-
-
+.contactLogo{
+  padding-left: 30px;
+  
+}
 
 
 
